#
# some news ... see also TODO for hints
#


2021-06-17 -> ## repo stuff
              add motd files for different combinations


2021-06-16 -> ## repo stuff
              add kernel howto for raspi3/4 (64Bit)
	      add default kernel configs for raspi3/4

2021-06-14 -> ## repo stuff
              add some more documentation stuff

              ## target stuff
	      add BMP180 HW module and activate it
	      add bmp280, bmp280_i2c kernel modules to modprobe.d (i2c.conf)


2021-06-13 -> ## repo stuff
              a lot of documentation adds
	      add gnumeric sheet of measured temp values

              ## libhelper && amtrack stuff
	      add correction values for the measured temperatures

	      ## sensor_pi stuff
	      add missing NEWLINE

2021-06-12 -> ## target stuff
	      regular void-linux updates
	      add xfce and xorg to the image (!)
	      add midori to image
	      add binfmt-support, dcron and activate via ruint
	      add cronutils and gkt2-engines
	      add user ambient for database location (and more)
	      add lighttp and php-cgi stuff
	      update kernel to 5.10.42
	      let all runit log use group ambient instead of users
	      add user baalue to group ambient

	      ## repo stuff
	      some documentation adds
	      start preparing PI-ENV_V0.0.2

	      ## libhelper stuff
	      change location of ambient_data.db

2021-06-10 -> ## lcd2004_i2c && sensor_pi stuff
              fix missing NEWLINES

              ## database stuff
              add skeleton for tool to readout the database content

              ## readout_db
              add skeleton

2021-06-09 -> ## lcd2004_i2c && sensor_pi stuff
              extend error reporting (see also TODO)

              ## amtrack stuff
	      add content to database

	      ## target stuff
	      regular void-linux updates

2021-06-08 -> ## database stuff
              change format of database -> date is the PRIMARY KEY

              ## amtrack