@@ -5,7 +5,7 @@
 
 Author: Thorsten Johannvorderbrueggen
 Email:  thorsten.johannvorderbrueggen@t-online.de
-Date:   16.06.2021/16.06.2021
+Date:   18.06.2021/16.06.2021
 
 Content:
 
@@ -102,7 +102,7 @@ Install modules
 ---------------
 
 DIR: $AMBIENT_REPO/kernel/linux-*
-KDO: make ARCH=arm64 INSTALL_MOD_PATH=../modules_5.10.43 modules_install
+KDO: make ARCH=arm64 INSTALL_MOD_PATH=../modules_5.10.44 modules_install
 
 
 Deploy SD-Card
@@ -131,7 +131,7 @@ Copy modules
 
 # Note: maybe your need to remove the old one
 DIR: $AMBIENT_REPO/kernel/linux-*
-KDO: sudo rsync -avz ../modules_5.10.43/lib/modules/. /mnt/raspi/raspi_rootfs/lib/modules/.
+KDO: sudo rsync -avz ../modules_5.10.44/lib/modules/. /mnt/raspi/raspi_rootfs/lib/modules/.
 
 
 Copy cleaned source to sd card
@@ -166,7 +166,7 @@ KDO: make scripts
 Prepare modules to link
 -----------------------
 
-DIR: /lib/modules/5.10.43
+DIR: /lib/modules/5.10.44
 KDO: rm build
 KDO: rm source
 KDO: ln -s /usr/src/linux source
